# ml-moscow-python-demo

./: .coverage  .dockerignore  CLAUDE.md  Dockerfile  README.md  TASK.md  code_quality_analysis.ipynb  code_quality_comparison.ipynb  code_quality_summary.csv  demo_submission.csv  deployment.md  detailed_issues.csv  docker-compose.yml  prediction_analysis.json  predictions.csv  pyproject.toml  radon_complexity.csv  radon_maintainability.csv  run_demo.py  setup.cfg  test_pipeline.py
.github/instructions/: general.instructions.md
artifacts/: feature_columns.json  model.joblib  predictions.csv  preprocessor.joblib
code_quality_comparison/data/claude_code_no_tuning/: radon_complexity.csv
code_quality_comparison/data/copilot_claude_no_tuning/: radon_maintainability.csv
code_quality_comparison/data/copilot_claude_with_tuning/: detailed_issues.csv  radon_complexity.csv
code_quality_comparison/data/copilot_gpt_no_tuning/: detailed_issues.csv  radon_complexity.csv
code_quality_comparison/data/copilot_gpt_with_tuning/: radon_maintainability.csv
code_quality_comparison/results/: comparison_report.md  complexity_comparison.csv  final_rankings.csv  implementation_summary_comparison.csv  maintainability_comparison.csv
metrics/: performance_report.json
models/: feature_engineer.joblib  preprocessor.joblib  titanic_ensemble.joblib  titanic_logistic_regression_model.joblib  titanic_model.joblib  titanic_xgboost_model.joblib
outputs/: model.joblib  predictions.csv
tests/: __init__.py  conftest.py  test_config.py  test_data.py  test_data_loader.py  test_feature_engineer.py  test_features.py  test_integration.py  test_models.py  test_pipeline.py  test_preprocessing.py  test_preprocessor.py  test_trainer.py
titanic_ml/: __init__.py  api.py  cli.py  config.py  data.py  data_loader.py  feature_engineer.py  main.py  models.py  prediction.py  preprocessing.py  trainer.py
titanic_ml/core/: __init__.py  config.py  data.py  data_loader.py  features.py  model.py  models.py  predictor.py  preprocessor.py  trainer.py
titanic_ml/data/: __init__.py  loader.py
titanic_ml/models/: __init__.py  ensemble.py
titanic_ml/pipeline/: __init__.py  pipeline.py  predict.py  prediction.py  predictor.py  train.py  training.py
titanic_ml/prediction/: __init__.py  predictor.py
titanic_ml/preprocessing/: __init__.py  features.py
titanic_ml/training/: __init__.py  trainer.py
titanic_ml/utils/: __init__.py  logging.py  metrics.py
